[gd_scene load_steps=30 format=2]

[ext_resource path="res://src/gamemode/state/GameOver.gd" type="Script" id=1]
[ext_resource path="res://assets/background.png" type="Texture" id=2]
[ext_resource path="res://assets/net.png" type="Texture" id=3]
[ext_resource path="res://assets/sfx/ballFloor.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sfx/ballRacket.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sfx/pickupCoin.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/score-display.png" type="Texture" id=7]
[ext_resource path="res://src/gamemode/state/Starting.gd" type="Script" id=8]
[ext_resource path="res://src/entity/ball/Ball.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/entity/char/Person.tscn" type="PackedScene" id=10]
[ext_resource path="res://modules/Juice/Camera/Shake.tscn" type="PackedScene" id=11]
[ext_resource path="res://modules/Pause/Pause.tscn" type="PackedScene" id=12]
[ext_resource path="res://modules/StateMachine/StateMachine.tscn" type="PackedScene" id=13]
[ext_resource path="res://modules/Debugging/DebugNode.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/font/score_font.tres" type="DynamicFont" id=15]
[ext_resource path="res://src/gamemode/Highlight.gd" type="Script" id=16]
[ext_resource path="res://src/gamemode/Tennis.gd" type="Script" id=17]
[ext_resource path="res://src/gamemode/state/Point.gd" type="Script" id=18]
[ext_resource path="res://src/gamemode/state/Playing.gd" type="Script" id=19]
[ext_resource path="res://assets/font/Last Spaceship.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://assets/sfx/winMatch.wav" type="AudioStream" id=21]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 232, 40 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Char1:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Char2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "blink_char1"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Char1:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.247059 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Char2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "blink_char2"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Char2:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.247059 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Char1:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.5, 127.5 )

[sub_resource type="DynamicFont" id=8]
size = 32
outline_size = 2
outline_color = Color( 0.243137, 0.215686, 0.360784, 1 )
use_mipmaps = true
extra_spacing_top = -4
extra_spacing_bottom = -4
extra_spacing_space = 4
font_data = ExtResource( 20 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("StateMachine/Gameover/Overlay/Gameover:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "gameover"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("StateMachine/Gameover/Overlay/Gameover:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Tennis" type="Node2D"]
script = ExtResource( 17 )
ball_scene = ExtResource( 9 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -76 )
current = true

[node name="Shake" parent="Camera2D" instance=ExtResource( 11 )]
camera_path = NodePath("..")
default_time = 0.1

[node name="Layers" type="Node2D" parent="."]

[node name="Backdrop" type="Node2D" parent="Layers"]
position = Vector2( -1, 0 )
z_index = -10

[node name="Background" type="Sprite" parent="Layers/Backdrop"]
position = Vector2( 2, -79 )
texture = ExtResource( 2 )

[node name="ScoreDisplay" type="Node2D" parent="Layers/Backdrop"]
unique_name_in_owner = true
position = Vector2( 2, -162 )

[node name="Sprite" type="Sprite" parent="Layers/Backdrop/ScoreDisplay"]
texture = ExtResource( 7 )

[node name="LabelChar1" type="Label" parent="Layers/Backdrop/ScoreDisplay"]
margin_left = -33.0
margin_top = -11.0
margin_right = 1.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 15 )
text = "00"
align = 2

[node name="LabelChar2" type="Label" parent="Layers/Backdrop/ScoreDisplay"]
margin_left = 4.0
margin_top = -11.0
margin_right = 38.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 15 )
text = "00"

[node name="Wall" type="StaticBody2D" parent="Layers/Backdrop"]
collision_mask = 7

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Layers/Backdrop/Wall"]
polygon = PoolVector2Array( 201, 43, 201, -196, -199, -196, -199, 43, -253, 42, -248, -267.594, 229.308, -286, 250, -235, 251, 43 )

[node name="Floor" type="StaticBody2D" parent="Layers/Backdrop" groups=["floor"]]
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Layers/Backdrop/Floor"]
position = Vector2( 2, 33 )
shape = SubResource( 2 )

[node name="Highlight" type="HBoxContainer" parent="Layers/Backdrop/Floor"]
margin_left = -199.0
margin_top = -7.0
margin_right = 201.0
margin_bottom = 44.0
alignment = 1
script = ExtResource( 16 )

[node name="Char1" type="ColorRect" parent="Layers/Backdrop/Floor/Highlight"]
margin_right = 198.0
margin_bottom = 51.0
size_flags_horizontal = 3
color = Color( 1, 1, 1, 0 )

[node name="Char2" type="ColorRect" parent="Layers/Backdrop/Floor/Highlight"]
margin_left = 202.0
margin_right = 400.0
margin_bottom = 51.0
size_flags_horizontal = 3
color = Color( 1, 1, 1, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Layers/Backdrop/Floor/Highlight"]
anims/RESET = SubResource( 4 )
anims/blink_char1 = SubResource( 3 )
anims/blink_char2 = SubResource( 5 )

[node name="Net" type="StaticBody2D" parent="Layers/Backdrop"]
position = Vector2( 2, -23 )
collision_mask = 7

[node name="Sprite" type="Sprite" parent="Layers/Backdrop/Net"]
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Layers/Backdrop/Net"]
polygon = PoolVector2Array( -7, -15, 0, -16, 7, -15, 7, 20, -7, 20 )

[node name="PlayerWall" type="StaticBody2D" parent="Layers/Backdrop"]
position = Vector2( 2, 0 )
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Layers/Backdrop/PlayerWall"]
position = Vector2( 0, -128 )
shape = SubResource( 1 )

[node name="FieldTransitionArea" type="Area2D" parent="Layers/Backdrop"]
position = Vector2( 2, 0 )
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Layers/Backdrop/FieldTransitionArea"]
position = Vector2( 0, -128 )
shape = SubResource( 1 )

[node name="Game" type="Node2D" parent="Layers"]

[node name="Person1" parent="Layers/Game" instance=ExtResource( 10 )]
position = Vector2( -160, -20 )

[node name="Person2" parent="Layers/Game" instance=ExtResource( 10 )]
position = Vector2( 160, -20 )
opposite_side = true
action_prefix = "p2_"

[node name="Positions" type="Node2D" parent="Layers"]

[node name="BallStart" type="Node2D" parent="Layers/Positions"]
position = Vector2( 0, -180 )

[node name="Char1" type="Position2D" parent="Layers/Positions/BallStart"]
position = Vector2( -160, 0 )

[node name="Char2" type="Position2D" parent="Layers/Positions/BallStart"]
position = Vector2( 160, 0 )

[node name="Pause" parent="." instance=ExtResource( 12 )]

[node name="Sound" type="Node" parent="."]

[node name="HitFloor" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 4 )
volume_db = -13.0

[node name="HitRacket" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 5 )
volume_db = -13.0

[node name="Score" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 6 )
volume_db = -13.0

[node name="Win" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 21 )
volume_db = -13.0

[node name="StateMachine" parent="." instance=ExtResource( 13 )]
initial_state = NodePath("Starting")

[node name="Starting" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Playing" type="Node" parent="StateMachine"]
script = ExtResource( 19 )

[node name="Point" type="Node" parent="StateMachine"]
script = ExtResource( 18 )

[node name="Reset" type="Timer" parent="StateMachine/Point"]
one_shot = true

[node name="Gameover" type="Node" parent="StateMachine"]
script = ExtResource( 1 )

[node name="Overlay" type="CanvasLayer" parent="StateMachine/Gameover"]

[node name="Gameover" type="Control" parent="StateMachine/Gameover/Overlay"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="StateMachine/Gameover/Overlay/Gameover"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.243137, 0.215686, 0.360784, 0.498039 )

[node name="Title" type="Label" parent="StateMachine/Gameover/Overlay/Gameover"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -53.0
margin_bottom = 1.0
custom_fonts/font = SubResource( 8 )
text = "PLAYER 1 WON!"
align = 1
valign = 2

[node name="Message" type="Label" parent="StateMachine/Gameover/Overlay/Gameover"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -8.0
margin_bottom = 35.0
text = "GAME OVER
PRESS R TO PLAY AGAIN"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="StateMachine/Gameover"]
root_node = NodePath("../../..")
anims/RESET = SubResource( 7 )
anims/gameover = SubResource( 6 )

[node name="DebugNode" parent="." instance=ExtResource( 14 )]
margin_left = -193.0
margin_top = -189.0
margin_right = -193.0
margin_bottom = -189.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="StateLabel" type="Label" parent="DebugNode"]
margin_right = 95.0
margin_bottom = 14.0
text = "state: Playingw"
uppercase = true

[node name="FocusedLabel" type="Label" parent="DebugNode"]
margin_top = 16.0
margin_right = 93.0
margin_bottom = 30.0
text = "focused: char1"
uppercase = true

[node name="KicksLabel" type="Label" parent="DebugNode"]
margin_top = 32.0
margin_right = 93.0
margin_bottom = 46.0
text = "kicks: 0"
uppercase = true

[node name="PointsChar1Label" type="Label" parent="DebugNode"]
margin_top = 48.0
margin_right = 95.0
margin_bottom = 62.0
text = "points char1: 0"
uppercase = true

[node name="PointsChar2Label" type="Label" parent="DebugNode"]
margin_top = 64.0
margin_right = 95.0
margin_bottom = 78.0
text = "points char2: 0"
uppercase = true

[connection signal="body_exited" from="Layers/Backdrop/FieldTransitionArea" to="StateMachine/Playing" method="_on_FieldTransitionArea_body_exited"]
[connection signal="attack_executed" from="Layers/Game/Person1" to="." method="_on_Person_attack_executed"]
[connection signal="attack_executed" from="Layers/Game/Person2" to="." method="_on_Person_attack_executed"]
[connection signal="transition" from="StateMachine" to="." method="_on_StateMachine_transition"]
[connection signal="timeout" from="StateMachine/Point/Reset" to="StateMachine/Point" method="_on_Reset_timeout"]
[connection signal="animation_finished" from="StateMachine/Gameover/AnimationPlayer" to="StateMachine/Gameover" method="_on_AnimationPlayer_animation_finished"]
